WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

TODO: align default value of cutchars with rxvt.1.pod and add it as a fallback in perl 'selection'
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=377194
TODO: automove-background
        - expect major compatibility issues and please test and report.
      	- converted from the veritable io manager event loop to
          the high performance libev (http://software.schmorp.de/pkg/libev).
	- fix a serious bug while setting the XIM destroy callback
          on (typical) 64 bit systems.
	- fix memory leak in pixmap code.

8.4  Sat Oct 27 14:02:13 CEST 2007
	- overhaul of the transparency/pixmap code (sasha).
	- fix possible race betwen visual bell and poweron.
          (reported by Martin von Gagern, gentoo?).
        - urxvt -e no longer crashes the child.
        - fixed some minor memleaks on incorrect usage or
          missing DISPLAY.
        - implement xterm 1002/1003 mouse tracking modes (exg).
        - source code organisational cleanups (exg).
        - updated io_manager.

8.3  Wed Aug  1 20:21:31 CEST 2007
	- new option: skipScroll/-ss, enabled by default.
        - go with the times and expect x11 library files in /usr/lib, not
          /usr/X11R6/lib.
	- initial transparency improvement/afterimage support
          patch by Sasha Vasko.
        - add urgentOnBell resource to set the urgency hint
          (patch by Philip Paeps).
        - do not process focus events caused by grabs
          (patch by Mikachu).
        - add iso14755_52 resource to disable iso14755 5.2 (exg).
        - add binding for backspace in iso14755 5.1 to remove the last
          digit (exg).
        - better option handling, support more than 30 options (exg).
	- nuke reconf script, serves no purpose anymore.