@@ -19,10 +19,11 @@ DUMB: support tex fonts
 
 TODO: align default value of cutchars with rxvt.1.pod and add it as a fallback in perl 'selection'
       http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=377194
-TODO: automove-background
         - expect major compatibility issues and please test and report.
       	- converted from the veritable io manager event loop to
           the high performance libev (http://software.schmorp.de/pkg/libev).
+    - automove-background functionality re-implemented internaly using :root op in pixmap 
+	  geometry string. For example: rxvt -pixmap "image.jpg;:root"
 	- fix a serious bug while setting the XIM destroy callback
           on (typical) 64 bit systems.
 	- fix memory leak in pixmap code.
